# task_tracker_test_assignment

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: main.yml
app/: Dockerfile  conftest.py  requirements.txt
app/api/: serializers.py  urls.py  views.py
app/api/tests/: test_auth_endpoints.py  test_tasks_endpoint.py
app/api/tests/helpers/: utils.py
app/task_tracker/: constants.py  settings.py  wsgi.py
app/tasks/: admin.py
app/tasks/migrations/: 0001_initial.py
app/users/: admin.py  models.py
app/users/migrations/: 0001_initial.py
infra/: .env.example  docker-compose.local.yml
nginx/: Dockerfile  nginx.conf
task_tracker/: conftest.py
task_tracker/api/: serializers.py  urls.py  views.py
task_tracker/task_tracker/: constants.py  settings.py  urls.py
task_tracker/tasks/: models.py
task_tracker/users/: models.py
