[project]
name = "task-tracker-test-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.1, <6.0",
    "djangorestframework>=3.16.0, <4.0",
    "djangorestframework-simplejwt[crypto]>=5.5.0",
    "djoser>=2.3.1",
    "psycopg[binary]>=3.2.9, <4.0",
    "python-dotenv>=1.1.0",
]
